--- a/about.html
+++ b/about.html
@@ -42,8 +42,9 @@
       <div class="center_heading">
         <div class="sm_heading">An economy with exponential potential.</div>
         <div class="md_heading">
-          We are an independent member-led group representing the Nigerian
-          financial and professional services (FPS) sector.
+          We are an independent member-led group established for the purpose of
+          promoting and influencing an enabling policy environment for the
+          Nigerian Financial and Professional Services (FPS) sector.
         </div>
       </div>
 
@@ -52,12 +53,23 @@
           <img src="images/about001.png" alt="Economy" />
         </div>
 
-        <div class="economy_description">
+        <div class="economy_description about">
           <div class="bold">
+            The Nigerian FPS sector comprises the Banking and Finance,
+            Insurance, Pensions, Asset Management, Capital Markets and Green
+            Finance, Islamic Finance, FinTech, Law, Accounting and Consulting
+            subsectors.
+            <br />
+            <br />
             Our goal is to support the growth and development of the Nigerian
             financial and professional services sector, the economy, and our
             members.
           </div>
+          <!-- <div class="bold">
+            Our goal is to support the growth and development of the Nigerian
+            financial and professional services sector, the economy, and our
+            members.
+          </div> -->
           <div class="thin">
             <p>
               Nigeria’s financial and professional services (FPS) sector
