--- a/greenstart.html
+++ b/greenstart.html
@@ -172,21 +172,23 @@
         <div class="economy_description">
           <div class="md_heading green">We are on a Mission.</div>
           <div class="thin">
-            Youths of Enterprise (YOE) Internship Programme is one of
-            EnterpriseNGR’s immediate developmental initiatives that aims to
-            reverse the national youth unemployment and under-employment trends
-            as well as build capacity in the private sector.
+            Everywhere you look, you are faced with graduates who, after
+            searching tirelessly for jobs, are forced to settle for menial jobs
+            or worse, dovetail into depression due to the financial, emotional,
+            and physical pressure unemployment brings.
           </div>
           <div class="thin">
-            The National Population Commission places Nigeria’s population at
-            about 220 million with 50% of the population comprising youths.
-            Unfortunately, over 38.5% of Nigerian youths remain unemployed and a
-            larger percentage are underemployed.
+            Some have passed through a system that did not fully equip them for
+            the demands of the corporate world and hence, experience the shock
+            of being labeled “unemployable” when they eventually get a chance to
+            prove their worth.
           </div>
           <div class="thin">
-            We seek to improve the employment and employability of Nigerian
-            youth within the Financial and Professional Services (“FPS”) sector
-            with the YOE Internship Programme.
+            But all that is about to change. We are on a mission to equip
+            Nigerian graduates with the requisite skills, qualifications and
+            experience they need to excel in the financial services sector and
+            stand shoulder to shoulder with their global counterparts through
+            the Youths Of Enterprise (YOE) initiative.
           </div>
           <div class="btn">
             <a href="http://youthofenterprise.ng/login"
@@ -454,7 +456,7 @@
                 data-width="26"
               ></span>
               <span class="text"
-                >Deepen our community enterprise footprint.</span
+                >Our committment to capacity building for future growth.</span
               >
             </li>
           </ul>
