--- a/index.html
+++ b/index.html
@@ -89,24 +89,16 @@
 
       <div class="economy_description">
         <div class="bold">
-          The Financial and Professional Services sector has the potential to
-          be the largest tax payer, largest employer, biggest exporting
-          industry and largest contributor to total economic output after
-          agriculture. The sector working in unison can help achieve this
-          goal.
+          The Financial and Professional Services (FPS) sector has the potential to be the largest tax payer, largest employer, biggest exporting industry and largest contributor to total economic output. The sector, however, needs to work in unison and speak with one voice to achieve this goal. 
         </div>
         <div class="thin">
-          To succeed and attain its potential as the center for financial
-          services in Africa, the Financial and Professional Services sector
-          requires an enabling policy environment and collaborative
-          transformational growth effort.
+          To realize its potential as Africa’s premier financial center, the Nigerian FPS sector needs to work collaboratively in a deliberate, concerted effort to foster an enabling and stable policy environment that promotes an open market and competitiveness.
         </div>
         <a href="about.html">  <button class="big_btn">
           <span class="iconify-inline" data-icon="bi:arrow-right-circle" style="color: #40ba7b" data-width="29"
             data-height="29"></span>
           <span class="btn_text">Learn More</span>
         </button></a>
-      
       </div>
     </div>
   </section>
@@ -117,12 +109,9 @@
       Promoting the Nigerian Financial Professional Services Sector.
     </div>
     <div class="thin">
-      EnterpriseNGR is positioned to foster a favorable environment for
-      engagement with policy makers and business sector advocacy, both
-      domestically and internationally- working in concert with government
-      authorities and other key stakeholders.
+      EnterpriseNGR is positioned to engage in both private sector and public sector advocacy with the aim of fostering a favourable operating environment for the Financial and Professional Services sector and championing the transformation of Nigeria into an international financial center.
     </div>
-    <a href="about.html"><button class="md_btn">
+    <a href="about.html">  <button class="big_btn">
       <span class="iconify-inline" data-icon="bi:arrow-right-circle" style="color: #40ba7b" data-width="29"
         data-height="29"></span>
       <span class="btn_text">Learn More</span>
