--- a/member.html
+++ b/member.html
@@ -219,7 +219,7 @@
               Member organizations with relevant competencies will be engaged to
               implement EnterpriseNGR’s major projects, including national and
               regional projects commissioned in partnership with global donor
-              agencies
+              agencies and institutions.
             </div>
           </div>
         </div>
