--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
       <div class="heading">Growth</div>
       <div class="heading">Starts.</div>
       <p>
-        EnterpriseNGR is a member-focused group that promotes the growth
-        and development of Nigeria’s financial, and professional services
-        ecosystem.
+        EnterpriseNGR is a member-led advisory body that promotes the growth and development of Nigeria’s financial and professional services ecosystem.
       </p>
       <div>
         <a href="about.html"><button class="big_btn">
@@ -89,7 +87,7 @@
 
       <div class="economy_description">
         <div class="bold">
-          The Financial and Professional Services (FPS) sector has the potential to be the largest tax payer, largest employer, biggest exporting industry and largest contributor to total economic output. The sector, however, needs to work in unison and speak with one voice to achieve this goal. 
+          The Financial and Professional Services (FPS) sector has the potential to be the largest tax payer, largest employer, biggest exporting industry and largest contributor to total economic output. The sector, however, needs to work in unison and speak with one voice to achieve this goal.  
         </div>
         <div class="thin">
           To realize its potential as Africa’s premier financial center, the Nigerian FPS sector needs to work collaboratively in a deliberate, concerted effort to foster an enabling and stable policy environment that promotes an open market and competitiveness.
