--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
     <div class="md_heading">Policy and Research</div>
     <div class="description">
       <div class="thin">
-        The latest research and thought leadership on important topics
-        impacting the Nigerian financial professional servicess sector.
+        The latest research and thought leadership on important topics impacting the Nigerian Financial and Professional Services sector.
       </div>
       <a href="policy.html"> <button class="md_btn">
         <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span><span
@@ -284,8 +283,7 @@
       <div class="card">
         <div class="md_heading">Youth of Enterprise</div>
         <div class="card_description">
-          EnterpriseNGR Internship programme aimed at empowering the next
-          generation of workplace talent.
+          EnterpriseNGR Internship programme aimed at empowering the next generation of workplace talent.
         </div>
         <button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
@@ -295,9 +293,7 @@
       <div class="card">
         <div class="md_heading">LEAD-P</div>
         <div class="card_description">
-          Our top talent training program for civil servants with high
-          potential for leadership. In partnership with the Office of the Head
-          of Civil Service of the Federation (“OHCSF”) and the AIG Foundation.
+          The Leadership Enhancement and Development Programme(LEAD-P) is our collaboration with the AIG Foundation and the Office of the Head of Civil Service of the Federation (“OHCSF”)  to build capacity in the Federal Civil Service.
         </div>
         <button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
@@ -307,8 +303,7 @@
       <div class="card">
         <div class="md_heading">In Focus: Series</div>
         <div class="card_description">
-          Ourofficial roundtable for curated voices in the Nigerian financial
-          and processional services sector.
+          Our official roundtable for curated voices in the Nigerian Financial and Professional Services sector.
         </div>
         <button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
