--- a/index.html
+++ b/index.html
@@ -318,8 +318,7 @@
       <div class="md_heading">Membership</div>
       <div class="membership_text">
         <div class="text">
-          Join our network of members at the forefront of advancing the
-          development and transformation of Nigeria.
+          Join our network of members at the forefront of advancing the development and transformation of Nigeria.
         </div>
         <a href="member.html"><button class="md_btn">
           <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: #40ba7b;"
