--- a/index.html
+++ b/index.html
@@ -255,9 +255,7 @@
         <div>Voice of Enterprise</div>
       </div>
       <div class="thin">
-        Annual EnterpriseNGR event to engage key industry stakeholders (both
-        globally and in Nigeria) as well as policymakers at all levels of
-        government.
+        Annual ENGR event that brings together key Nigerian and global industry stakeholders and policy makers from all levels of government in the effort to promote the FPS sector.
       </div>
       <a href="greenstart.html"><button class="md_btn">
         <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span><span
