--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
           </div> -->
           <div class="thin">
             <p>
-              Nigeria’s financial and professional services (FPS) sector
+              Nigeria’s Financial and Professional S ervices (FPS) sector
               contributes majorly to the nation’s economic growth and hence is
               crucial to enabling the positive development of the economy. Yet,
               amongst the many subsectors within Nigeria’s FPS, only the banking
@@ -158,13 +158,13 @@
           <div class="md_heading">How We Started</div>
           <div class="thin">
             <p>
-              EnterpriseNGR Professional Advocacy Group ltd/Gte
-              (“EnterpriseNGR”) was incorporated at the Corporate Affairs
-              Commission on 10 April 2018, as a company limited by guarantee.
-              After several years of ideation, the Company launched in October
-              2021 as an independent professional policy and advocacy group with
-              the aim of promoting and advocating for the Financial and
-              Professional Services (FPS) sector of Nigeria.
+              As a consolidated advocacy group, we support government and
+              regulators in the formation of policies that improve the financial
+              inclusion and performance of FPS sector operators in Nigeria.
+              These policies will result in increased tax receipts for the
+              government, increased credit to the real sector, and overall
+              increased employment opportunities. We take pride in doing this
+              while protecting the interest of our members.
             </p>
             <br />
             <p>
@@ -250,7 +250,7 @@
         <div class="sm_heading">Vision</div>
         <div class="thin">
           To advance Nigeria’s transformation as Africa’s premier financial
-          services centre
+          services centre.
         </div>
       </div>
 
@@ -266,7 +266,7 @@
                 data-width="29"
                 data-height="29"
               ></span
-              >Financial Inclusion.
+              >Sustainability
             </li>
             <li>
               <span
@@ -276,7 +276,7 @@
                 data-width="29"
                 data-height="29"
               ></span
-              >Digitization.
+              >Trust
             </li>
             <li>
               <span
@@ -286,7 +286,7 @@
                 data-width="29"
                 data-height="29"
               ></span
-              >Regionalization.
+              >Partnership
             </li>
           </ul>
         </div>
