--- a/about.html
+++ b/about.html
@@ -345,7 +345,7 @@
               </div>
               <div class="sm_heading">Bolaji Balogun</div>
               <div class="bold">Director</div>
-              <div class="bold">Chapel Hill Denham</div>
+              <div class="bold">Chapelhill Denham</div>
             </div>
 
             <div class="card">
