--- a/about.html
+++ b/about.html
@@ -533,7 +533,7 @@
           <div>
             <div class="sm_heading">Bolaji Balogun</div>
             <div class="bold">Chairman</div>
-            <div class="bold">Chapel Hill Denham</div>
+            <div class="bold">Chapelhill Denham</div>
             <div class="thin">
               Bolaji Balogun is the MD/CEO of Chapel Hill Denham.
             </div>
