--- a/about.html
+++ b/about.html
@@ -535,7 +535,7 @@
             <div class="bold">Chairman</div>
             <div class="bold">Chapelhill Denham</div>
             <div class="thin">
-              Bolaji Balogun is the MD/CEO of Chapel Hill Denham.
+              Bolaji Balogun is the MD/CEO of Chapelhill Denham.
             </div>
           </div>
         </div>
