--- a/agenda.html
+++ b/agenda.html
@@ -113,11 +113,12 @@
           </div>
           <div class="thin">
             We aim to advance this agenda by actively collaborating with our
-            members, industry partners, and other stakeholders. Our pursuit of
-            recognizable success in all these areas will be supported by strong
-            and reliable research and data insights – all aimed at supporting
-            the growth of the Nigerian FPS sector and positioning it as a
-            leading financial centre in Africa and the world.
+            members, industry partners, government regulators, and stakeholders.
+            Our pursuit of recognizable success in all these areas will be
+            supported by strong and reliable research and data insights – all
+            aimed at supporting the growth of the Nigerian FPS sector and
+            positioning it as a leading financial centre in Africa and the
+            world.
           </div>
           <a href="about.html">
             <button class="big_btn">
@@ -137,10 +138,7 @@
 
     <section class="key_focus">
       <div class="md_heading">A breakdown of our key focus areas</div>
-      <div class="thin">
-        These are the tools we will deploy to succeed at our key focus areas and
-        achieve the mission and vision of EnterpriseNGR.
-      </div>
+
       <div class="number_cards">
         <div>
           <div class="md_heading">1.</div>
