--- a/newsitem.html
+++ b/newsitem.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="" />
-    <title>Document</title>
+    <title>News and Media</title>
   </head>
   <body>
     <header class="article_header">
