--- a/greenstart.html
+++ b/greenstart.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <title>Get your green start</title>
+    <title>Youth of Enterprise</title>
   </head>
   <body>
     <header class="header greenstart">
