--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 />
-  <title>Our Agenda</title>
+  <title>EnterpriseNGR</title>
 </head>
 
 <body>
