--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <title>Document</title>
+    <title>News and Media</title>
   </head>
   <body>
     <header class="header news">
